--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             Sapiente dolores ab ut asperiores facilis inventore, 
             et enim qui mollitia assumenda?
         </div>
+        <p>Template Realizzato da Emanuele Zignale in html/css</p>
       </section>
       
 
